2005-12-13 Kevin
* Change Cash Transfer Product Meta Type to "BAOBAB Cash Delivery".
* Change reference to getPortalReferenceCurrencyID portal method. Use Baobab_getPortalReferenceCurrencyID instead.

2005-12-07 Kevin
* Move CashTransfer_CashTransferLine_fastInputCall to erp5_baobab_config because they contain reference to the local currency.