@@ -82,7 +82,9 @@
         <item>
             <key> <string>group_list</string> </key>
             <value>
-              <tuple/>
+              <tuple>
+                <string>delivery</string>
+              </tuple>
             </value>
         </item>
         <item>
